Fix header hamburger nav disappear at wrong width

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 958px) {
+@media screen and (min-width: 971px) {
     .header-img {
         width: 18.3rem;
         height: 3.2rem;
